# VCCSRVADM

./: .gitignore  README.md
Code/: ReportInfo.py  server.py
Code/GO/: Prometheus.go  ReadConfig.go  go.mod  go.sum  main.go
Code/GO/SendFile/: SendFile.go  SendSensor.go
Code/GO/Util/: Prometheus.go  ReadConfig.go
Code/Rust/: Cargo.toml
Code/Rust/src/: main.rs
Code/marinaio_monitor_client/: Cargo.toml
Code/marinaio_monitor_client/src/: main.rs
Doc/: Contents.md  后台操作与系统重装.md  拓展逻辑卷.md  服务器资源的监测管理.md  服务器资源监控.md  第四必修课.md
