[package]
name = "marinaio_monitor_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-sheets4 = "5.0.5"
prometheus = "0.13.4"
hyper = "1.3.1"
hyper-rustls = "0.27.2"
