[package]
name = "marinaio_monitor_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
nvml-wrapper = "^0.7.0"
nvml-wrapper-sys = "^0.5.0"
sysinfo = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }